--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">Tic Tac Toe</string>
-    <string name="action_settings">Settings</string>
+    <string name="logout">Log Out</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
+    <string name="login_fragment_label">Login Fragment</string>
+    <string name="game_fragment_label">Game Fragment</string>
+    <string name="login">Register or Log In</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="placeholder">Placeholder</string>
+    <string name="new_game">New Game</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
