--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Tic Tac Toe</string>
     <string name="placeholder">Placeholder</string>
 
-    <string name="login_fragment_label">Login Fragment</string>
-    <string name="game_fragment_label">Game Fragment</string>
-    <string name="dashboard_fragment_label">Dashboard Fragment</string>
+    <string name="login_fragment_label">Login</string>
+    <string name="game_fragment_label">Tic Tac Toe: Game</string>
+    <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>
 
     <string name="login">Register or Log In</string>
     <string name="logout">Log Out</string>
@@ -14,4 +14,7 @@
     <string name="password">Password</string>
 
     <string name="blank"> </string>
+    <string name="new_game_dialog_message">Which type of game do you want to create?</string>
+    <string name="two_player">Two-Player</string>
+    <string name="one_player">One-Player</string>
 </resources>
